# rusty-city

./: .releaserc.yml  Cargo.toml  README.md  index.html  rusty-city.wasm
.github/workflows/: deployment.yml  release.yml  tests.yml
src/: cell.rs  debug.rs  main.rs  species.rs  universe.rs  utils.rs
