[package]
name = "rusty-city"
version = "0.1.0"
authors = ["Alvaro Tinoco <alv_tinoco_97@hotmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/MrMarble/rusty-city"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package.'*']
opt-level = 3 # Compile dependencies in release mode for 'cargo run' to improve debug performance

[dependencies]
macroquad = "0.3.4"
crossbeam = "0.8.1"
